--- a/djangoproject/gestion_stock/templates/lettrevoitureentree.html
+++ b/djangoproject/gestion_stock/templates/lettrevoitureentree.html
@@ -94,7 +94,7 @@
         location.href = "{% url 'lveadd' %}";
     });
 
-    $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
+    $(document).on("click", "button.dyna" , function(e) {
         var idClicked = e.target.id;
         var name = "";
         var trueid = 0;
